tests/baselines/reference/derivedClassTransitivity3.errors.txt
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity3.ts(18,1): error TS2322: Type 'E<文字>' is not assignable to type 'C<文字>'.
  Types of property 'foo' are incompatible.
    Type '(x: 文字, y?: 数字) => 无值' is not assignable to type '(x: 文字, y: 文字) => 无值'.
      Types of parameters 'y' and 'y' are incompatible.
        Type '文字' is not assignable to type '数字'.


==== tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity3.ts (1 errors) ====
    // subclassing is not transitive when you can remove required parameters and add optional parameters
    
    class C<T> {
        foo(x: T, y: T) { }
    }
    
    class D<T> extends C<T> {
        foo(x: T) { } // ok to drop parameters
    }
    
    class E<T> extends D<T> {
        foo(x: T, y?: number) { } // ok to add optional parameters
    }
    
    var c: C<string>;
    var d: D<string>;
    var e: E<string>;
    c = e;
    ~
!!! error TS2322: Type 'E<文字>' is not assignable to type 'C<文字>'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '(x: 文字, y?: 数字) => 无值' is not assignable to type '(x: 文字, y: 文字) => 无值'.
!!! error TS2322:       Types of parameters 'y' and 'y' are incompatible.
!!! error TS2322:         Type '文字' is not assignable to type '数字'.
    var r = c.foo('', '');
    var r2 = e.foo('', 1);